SFDCProject/src/objects/Contract_Array__c.object
<CustomObject>
    <fields>
        <fullName>AC_DC_derate_factor__c</fullName>
        <label>AC DC derate factor</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Solar_Access__c</fullName>
        <label>Annual Solar Access</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>April_Shade__c</fullName>
        <label>April Shade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Array_Number__c</fullName>
        <label>Array Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Asset__c</fullName>
        <label>Asset</label>
        <referenceTo>Asset__c</referenceTo>
        <relationshipLabel>Contract Arrays</relationshipLabel>
        <relationshipName>Contract_Arrays</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>August_Shade__c</fullName>
        <label>August Shade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Azimuth__c</fullName>
        <label>Azimuth</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CEC_AC_Rating__c</fullName>
        <label>CEC AC Rating</label>
        <precision>11</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>December_Shade__c</fullName>
        <label>December Shade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>East__c</fullName>
        <label>East</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <label>External Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Source__c</fullName>
        <label>External Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>February_Shade__c</fullName>
        <label>February Shade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ground_Mount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ground Mount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inverter_Type__c</fullName>
        <label>Inverter Type</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>January_Shade__c</fullName>
        <label>January Shade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>July_Shade__c</fullName>
        <label>July Shade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>June_Shade__c</fullName>
        <label>June Shade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>March_Shade__c</fullName>
        <label>March Shade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>May_Shade__c</fullName>
        <label>May Shade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Mounting_Method__c</fullName>
        <label>Mounting Method</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Negative_30__c</fullName>
        <label>-30°</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Negative_60__c</fullName>
        <label>-60°</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>November_Shade__c</fullName>
        <label>November Shade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Number_of_Inverters__c</fullName>
        <label>Number of Inverters</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Panels__c</fullName>
        <label>Number of Panels</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>October_Shade__c</fullName>
        <label>October Shade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Panel_Type__c</fullName>
        <label>Panel Type</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pitch__c</fullName>
        <label>Pitch</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Positive_30__c</fullName>
        <label>30°</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Positive_60__c</fullName>
        <label>60°</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production__c</fullName>
        <label>Production Yr 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>September_Shade__c</fullName>
        <label>September Shade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Service_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Contract</label>
        <referenceTo>ServiceContract</referenceTo>
        <relationshipLabel>Contract Arrays</relationshipLabel>
        <relationshipName>Contract_Arrays</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>South__c</fullName>
        <label>South</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>West__c</fullName>
        <label>West</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Contract Array</label>
    <nameField>
        <displayFormat>CA-{000000000}</displayFormat>
        <label>Contract Array Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Arrays</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>